--- a/1-Beginner/Bin2Dec/style.css
+++ b/1-Beginner/Bin2Dec/style.css
@@ -1,16 +1,10 @@
 .card {
   border-radius: 12px;
   background: var(--background-color);
-  box-shadow: -20px 20px 40px #beced8, 20px -20px 40px #ffffff;
-  padding: 12px 18px;
+  box-shadow: var(--background-shadow);
+  padding: 1.5rem 1.3rem;
 }
-.container {
-  display: grid;
-  place-content: center;
-  place-self: center;
-  background: var(--background-color);
-  height: 100vh;
-}
+
 form {
   display: flex;
   flex-direction: column;
@@ -19,9 +13,9 @@ form {
 form input {
   background-color: var(--background-color);
   border: none;
-  padding: 12px 16px;
+  padding: 1.2rem 16px;
   border-radius: 12px;
-  box-shadow: inset -5px 5px 10px #c7d7e2, inset 5px -5px 10px #f9ffff;
+  box-shadow: var(--background-inner-shadow);
 }
 form p {
   background-color: var(--background-color);
@@ -29,7 +23,7 @@ form p {
   display: none;
   padding: 12px 16px;
   border-radius: 12px;
-  box-shadow: inset -5px 5px 10px #c7d7e2, inset 5px -5px 10px #f9ffff;
+  box-shadow: var(--background-inner-shadow);
 }
 form p.show {
   display: flex;
@@ -39,7 +33,7 @@ form button {
   border: none;
   padding: 12px 16px;
   border-radius: 12px;
-  box-shadow: -5px 5px 10px #c7d7e2, -5px 5px 10px #f9ffff;
+  box-shadow: var(--background-shadow);
 }
 .disabled {
   pointer-events: none;
