--- a/css/variable.css
+++ b/css/variable.css
@@ -7,20 +7,18 @@
 }
 
 :root {
-  --background-color: #f5f5f5;
-  --background-hover: linear-gradient(145deg, #ffffff, #dddddd);
-  --background-shadow: 5px 5px 10px #e9e9e9, -5px -5px 10px #ffffff;
+  --background-color: #e0e5ec;
+  --background-hover: linear-gradient(145deg, #f0f5fd, #caced4);
+  --background-click: linear-gradient(145deg, #caced4, #f0f5fd);
+  --background-shadow: 5px 5px 10px #a3b1c6, -5px -5px 10px #ffffff;
+  --background-inner-shadow: inset 5px 5px 10px #bec3c9,
+    inset -5px -5px 10px #ffffff;
 
-  --primary-color: #4f48ec;
-  --primary-shadow: 20px 20px 60px #433dc9, -20px -20px 60px #5b53ff;
+  --primary-color: #f7444e;
+  --secondary-color: #78bcc4;
+  --text-color: #002c3e;
 
-  --secondary-color: #100e34;
-  --secondary-shadow: 20px 20px 60px #0e0c2c, -20px -20px 60px #12103c;
-
-  --complementary-color: #ffbf18;
-  --complementary-shadow: 5px 5px 10px #d49f14, -5px -5px 10px #ffdf1c;
-
-  --border-radius: 0.9rem;
+  --border-radius: 0.8rem;
 }
 
 tt,
@@ -76,7 +74,7 @@ blockquote {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: var(--secondary-color);
+  color: var(--text-color);
   text-decoration: none;
 }
 img,
@@ -92,6 +90,12 @@ object {
 }
 body {
   background: var(--background-color);
+}
+.container {
+  display: grid;
+  place-content: center;
+  place-items: center;
+  height: 100vh;
 }
 .poppins-thin {
   font-family: "Poppins", sans-serif;
