--- a/1-Beginner/Border-Radius-Previewer/style.css
+++ b/1-Beginner/Border-Radius-Previewer/style.css
@@ -4,6 +4,7 @@
   place-content: center;
   place-self: center;
   grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
 }
 .__box_preview_border_radius {
   display: grid;
@@ -14,10 +15,13 @@
   padding: 1rem;
 }
 .__box_preview {
-  width: 100%;
-  height: 100%;
-  border: 2px solid var(--primary-color);
-  border-radius: 1rem;
+  width: 200px;
+  height: 200px;
+  box-shadow: var(--background-shadow);
+  border-top-right-radius: 100px;
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 .__box_control_and_code_clipboard {
   display: flex;
@@ -39,9 +43,48 @@
 }
 .__wrapper_input {
   display: flex;
-  flex-direction: column;
+  gap: 2rem;
+}
+.__wrapper_input label {
+  white-space: nowrap;
+}
+.__wrapper_input input {
+  width: 100%;
 }
 .__code_clipboard {
+  position: relative;
   background: var(--background-color);
   color: var(--secondary-color);
+}
+.__code_clipboard pre {
+  color: var(--background-color);
+  background: var(--text-color);
+  border-radius: var(--border-radius);
+  padding: 2rem 1rem 0 1rem;
+}
+
+.__code_clipboard span {
+  color: rgb(150, 203, 254);
+  font-size: small;
+}
+.__code_clipboard span.declaration {
+  color: rgb(150, 203, 254);
+}
+.__code_clipboard span.value {
+  color: rgb(197, 200, 198);
+}
+.__code_clipboard .__code_container {
+  display: none;
+  position: absolute;
+}
+.__code_clipboard .__copy {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background: var(--secondary-color);
+  color: var(--text-color);
+  font-weight: 600;
+  padding: 0.3rem 0.9rem;
+  border-radius: var(--border-radius);
+  border: none;
 }
