new project: Border Radius Preview (finish with bugs)
menyelesaikan Border Radius Preview walaupun terdapat logic error dan style yang masih kacau

--- a/1-Beginner/Border-Radius-Previewer/style.css
+++ b/1-Beginner/Border-Radius-Previewer/style.css
@@ -78,6 +78,8 @@
   position: absolute;
 }
 .__code_clipboard .__copy {
+  cursor: pointer;
+  z-index: 999;
   position: absolute;
   top: 1rem;
   right: 1rem;
