--- a/css/variable.css
+++ b/css/variable.css
@@ -7,6 +7,21 @@
 }
 
 :root {
+  --background-dark-color: #161616; /* a very dark gray */
+  --background-dark-hover: linear-gradient(
+    145deg,
+    #222222,
+    #101010
+  ); /* a darker gray and a lighter gray */
+  --background-dark-click: linear-gradient(
+    145deg,
+    #101010,
+    #222222
+  ); /* a lighter gray and a darker gray */
+  --background-dark-shadow: 5px 5px 10px #0a0a0a, -5px -5px 10px #2a2a2a; /* a black and a gray */
+  --background-dark-inner-shadow: inset 5px 5px 10px #0a0a0a,
+    inset -5px -5px 10px #2a2a2a; /* a black and a gray */
+
   --background-color: #e0e5ec;
   --background-hover: linear-gradient(145deg, #f0f5fd, #caced4);
   --background-click: linear-gradient(145deg, #caced4, #f0f5fd);
@@ -16,9 +31,37 @@
 
   --primary-color: #0079ff;
   --secondary-color: #ff0060;
-  --text-color: #071952;
+  --text-color: #171717;
+  --text-dark-color: #f5f5f5;
 
   --border-radius: 0.8rem;
+}
+
+body[data-theme="dark"] {
+  background: var(--background-dark-color);
+  color: var(--text-dark-color);
+}
+body {
+  background: var(--background-color);
+  color: var(--text-color);
+}
+
+.container {
+  display: grid;
+  place-content: center;
+  place-items: center;
+  height: 100vh;
+}
+img,
+svg,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+  display: block;
+  /* vertical-align: middle; */
 }
 
 tt,
@@ -74,28 +117,8 @@ blockquote {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: var(--text-color);
+  color: inherit;
   text-decoration: none;
-}
-img,
-svg,
-video,
-canvas,
-audio,
-iframe,
-embed,
-object {
-  display: block;
-  vertical-align: middle;
-}
-body {
-  background: var(--background-color);
-}
-.container {
-  display: grid;
-  place-content: center;
-  place-items: center;
-  height: 100vh;
 }
 .poppins-thin {
   font-family: "Poppins", sans-serif;
