feat: update base landing page
memperbaiki halaman hero untuk menampung semua project

dan memperbaiki beberapa bug style

--- a/css/variable.css
+++ b/css/variable.css
@@ -117,7 +117,7 @@ blockquote {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: inherit;
+  color: var(--text-color);
   text-decoration: none;
 }
 .poppins-thin {
