--- a/1-Beginner/Christmas-Lights-App/style.css
+++ b/1-Beginner/Christmas-Lights-App/style.css
@@ -30,13 +30,13 @@
   animation: flash-1 1s ease-in-out infinite alternate;
 }
 .__light.active:nth-child(2n + 0) {
-  animation: flash-2 1s ease-in-out infinite alternate;
+  animation: flash-2 1s ease-in-out 500ms infinite alternate;
 }
 .__light.active:nth-child(3n + 0) {
-  animation: flash-3 1s ease-in-out infinite alternate;
+  animation: flash-3 1s ease-in-out 250ms infinite alternate;
 }
 .__light.active:nth-child(4n + 0) {
-  animation: flash-4 1s ease-in-out infinite alternate;
+  animation: flash-4 1s ease-in-out 750ms infinite alternate;
 }
 .__text {
   display: flex;
@@ -45,6 +45,7 @@
   text-transform: uppercase;
   letter-spacing: 2rem;
   transition: all ease-in-out 0.5s;
+  color: var(--text-dark-color);
 }
 .__text.active {
   text-shadow: 0 0 calc(var(--globe-spread) * 3) var(--text-dark-color);
